# rkm_codes

./: .bump.cfg  .bump.cfg.nt  .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  README.rst  clean  pyproject.toml  releases.rst  setup.py  test_rkm_code.py  tox.ini
.github/workflows/: build.yaml
rkm_codes/: __init__.py  rkm_codes.py
tests/: rkm_codes  test_rkm_code.py
