[project]
name = "rkm_codes"
version = "0.6"
description = "QuantiPhy support for RKM codes."
readme = "README.rst"
keywords = ["quantiphy", "rkm"]
authors = [
    {name = "Ken Kundert"},
    {email = "rkm_codes@nurdletech.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.6"
dependencies = [
    "quantiphy>=2.4",
]

[project.urls]
repository = "https://github.com/kenkundert/rkm_codes"
changelog = "https://emborg.readthedocs.io/en/latest/releases.html"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"
