[project]
name = "rkm_codes"
version = "0.6"
description = "QuantiPhy support for RKM codes."
readme = "README.rst"
keywords = ["quantiphy", "rkm"]
authors = [
    {name = "Ken Kundert"},
    {email = "rkm_codes@nurdletech.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.6"
dependencies = [
    "quantiphy>=2.4",
]

[project.urls]
repository = "https://github.com/kenkundert/rkm_codes"
changelog = "https://emborg.readthedocs.io/en/latest/releases.html"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.ruff]
exclude = [".tox", "doc", "Diffs"]

[tool.ruff.lint]
select = ["F"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"rkm_codes/__init__.py" = ["F401"]
